--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -60,7 +60,7 @@
               </div>
 
               <div class="col-sm-6">
-                <input autocomplete="off" maxlength="100" formControlName="phonenumber" type="text"
+                <input autocomplete="off" maxlength="100" formControlName="phoneNumber" type="text"
                   placeholder="Phonenumber" />
               </div>
 
