--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<baf-header (loggedInUserInfoEmitter)="getLoggedInUserInfo($event)"></baf-header>
+<baf-header></baf-header>
 <main>
   <router-outlet></router-outlet>
 </main>
